--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
+# Divers #
+target/
+bin/
+comparateur-de-volsdb*
+
+.buildpath
+.project
+.settings
+.classpath
+.idea
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+*~
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Class generate #
 *.class
 
 # Package Files #
-*.jar
 *.war
 *.ear
+
+src/main/webapp/WEB-INF/db-config.xml
+
