change default password

--- a/src/main/webapp/WEB-INF/db-config.xml.dist
+++ b/src/main/webapp/WEB-INF/db-config.xml.dist
@@ -47,7 +47,7 @@
 		<property name="driverClassName" value="com.mysql.jdbc.Driver" />
 		<property name="url" value="jdbc:mysql://localhost:3306/MyVerySign" />
 		<property name="username" value="root" />
-		<property name="password" value="miirmoze" />
+		<property name="password" value="" />
 	</bean>
 	<tx:annotation-driven transaction-manager="transactionManager"/>
 </beans>
