--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@
             <artifactId>hsqldb</artifactId>
             <version>2.2.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
